--- a/New_application/main.Master
+++ b/New_application/main.Master
@@ -96,7 +96,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="\Admin/frmUserSetup.aspx">
+                                <a href="\Admin/frmRoleSetup.aspx">
                                     <i class="bi bi-circle"></i><span>Role setup</span>
                                 </a>
                             </li>
