--- a/New_application/main.Master
+++ b/New_application/main.Master
@@ -77,7 +77,7 @@
                 </nav>
             </header>
             <aside id="sidebar" class="sidebar">
-                <ul class="sidebar-nav" id="sidebar-nav">
+                <%--<ul class="sidebar-nav" id="sidebar-nav">
                     <li class="nav-heading">Pages</li>
                     <li class="nav-item">
                         <a class="nav-link collapsed" href="\pages/frmDashboard.aspx">
@@ -114,6 +114,8 @@
                             </li>
                         </ul>
                     </li>
+                </ul>--%>
+                <ul class="sidebar-nav" id="App_Menu" runat="server">
                 </ul>
             </aside>
             <%--<div id="page-wrapper">
@@ -135,7 +137,26 @@
             <script src="<%=ResolveUrl("~/assets/vendor/tinymce/tinymce.min.js") %>"></script>
             <script src="<%=ResolveUrl("~/assets/vendor/php-email-form/validate.js") %>"></script>
             <script src="<%=ResolveUrl("~/assets/js/main.js") %>"></script>
+            <script src="<%=ResolveUrl("~/Scripts/jquery-3.4.1.js") %>"></script>
+            <script src="<%=ResolveUrl("~/Scripts/jquery-3.4.1.min.js") %>"></script>
+            <script>
+                $('document').ready(function () {
+                    $('li.nav-item a').click(function (e) {
+                        debugger
+                        var target = e.target.dataset.bsTarget
+                        if (document.getElementById(target).classList[2] == 'show') {
+                            document.getElementById(target).classList.remove('show')
+                        }
+                        else {
+                            document.getElementById(target).classList.add
+                                ('show')
+                        }
+                    });
+                })
+            </script>
         </div>
     </form>
 </body>
+
+
 </html>
