--- a/New_application/main.Master
+++ b/New_application/main.Master
@@ -37,7 +37,7 @@
         <div id="wrapper">
             <header id="header" class="header fixed-top d-flex align-items-center">
                 <div class="d-flex align-items-center justify-content-between">
-                    <a href="frmDashboard.aspx" class="logo d-flex align-items-center">
+                    <a href="\pages/frmDashboard.aspx" class="logo d-flex align-items-center">
                         <span class="d-none d-lg-block">Hospital Application</span>
                     </a>
                     <i class="bi bi-list toggle-sidebar-btn"></i>
