--- a/New_application/main.Master
+++ b/New_application/main.Master
@@ -28,10 +28,11 @@
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
 
+
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
-
+    <a href="src/scss/core/sidebar/sidebar.scss">src/scss/core/sidebar/sidebar.scss</a>
 <body>
     <form id="form1" runat="server" class="row g-3 needs-validation" novalidate>
         <div id="wrapper">
@@ -139,9 +140,9 @@
             <script src="<%=ResolveUrl("~/assets/vendor/php-email-form/validate.js") %>"></script>
             <script src="<%=ResolveUrl("~/assets/js/main.js") %>"></script>
             <script src="<%=ResolveUrl("~/Scripts/jquery-3.4.1.min.js") %>"></script>
+            
 
-            <%--<script src="<%= ResolveUrl("~/assets/js/bootstrap.min.js")%>"></script>--%>
-            <%--<script src="<%= ResolveUrl("~/assets/js/vendor-all.min.js")%>"></script>--%>
+
             <script src="<%= ResolveUrl("~/assets/js/pcoded.min.js")%>"></script>
             <script>
                 debugger;
