--- a/New_application/main.Master
+++ b/New_application/main.Master
@@ -27,12 +27,12 @@
     <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet">
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css">
 
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
-    <a href="src/scss/core/sidebar/sidebar.scss">src/scss/core/sidebar/sidebar.scss</a>
 <body>
     <form id="form1" runat="server" class="row g-3 needs-validation" novalidate>
         <div id="wrapper">
@@ -140,10 +140,22 @@
             <script src="<%=ResolveUrl("~/assets/vendor/php-email-form/validate.js") %>"></script>
             <script src="<%=ResolveUrl("~/assets/js/main.js") %>"></script>
             <script src="<%=ResolveUrl("~/Scripts/jquery-3.4.1.min.js") %>"></script>
+
+            <!-- Page level plugins -->
+            <script src="<%=ResolveUrl("~/assets/datatables/jquery.dataTables.min.js") %>"></script>
+            <script src="<%=ResolveUrl("~/assets/datatables/dataTables.bootstrap4.js") %>"></script>
+            <script src="<%=ResolveUrl("~/assets/datatables/datatables-demo.js") %>"></script>
+
+            <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
+
+
+
             
 
 
-            <script src="<%= ResolveUrl("~/assets/js/pcoded.min.js")%>"></script>
+
+
+            <scril/pt src="<%= ResolveUrl("~/assets/js/pcoded.min.js")%>"></scril/pt>
             <script>
                 debugger;
                 $('document').ready(function () {
