--- a/New_application/main.Master
+++ b/New_application/main.Master
@@ -5,19 +5,15 @@
 <head runat="server">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
     <title></title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
     <!-- Vendor CSS Files -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,12 +24,10 @@
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css">
-
-
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
-<body>
+<body style="overflow: hidden">
     <form id="form1" runat="server" class="row g-3 needs-validation" novalidate>
         <div id="wrapper">
             <header id="header" class="header fixed-top d-flex align-items-center">
@@ -61,7 +55,6 @@
                             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                                 <li class="dropdown-header">
                                     <h6 id="pro_name" runat="server">USER NAME</h6>
-                                    <%--<asp:Label ID="Label1" text="" runat="server" Text="Label"></asp:Label>--%>
                                     <span id="pro_dec" runat="server">Web Designer & Developer</span>
                                 </li>
                                 <li>
@@ -101,32 +94,6 @@
                         </ItemTemplate>
                     </asp:Repeater>
                 </ul>
-                <%--  <nav class="pcoded-navbar ">
-                    <div class="navbar-wrapper" id="sidebsr-nav">
-                        <div class="navbar-content scroll-div">
-                            <ul class="nav pcoded-inner-navbar">
-                                <asp:Repeater ID="rpt_menu" runat="server">
-                                    <ItemTemplate>
-                                        <li class="nav-item pcoded-hasmenu">
-                                            <a class="nav-link collapsed" data-bs-target="#ul<%# Eval("Formid") %>" data-bs-toggle="collapse" href='#' aria-expanded="true">
-                                                <i class="<%# Eval("Icon") %>"></i><span><%# Eval("Formname") %></span> <i class="bi bi-chevron-down ms-auto"></i>
-                                            </a>
-                                            <ul id="#ul<%# Eval("Formid") %>" class="pcoded-submenu" data-bs-parent="#sidebar-nav" style="">
-                                                <asp:Repeater ID="rpt_child" runat="server">
-                                                    <ItemTemplate>
-                                                        <li>
-                                                            <a href="<%# Eval("pageurl") %>" class="nav-link"><span><%# Eval("Formname") %></span></a>
-                                                        </li>
-                                                    </ItemTemplate>
-                                                </asp:Repeater>
-                                            </ul>
-                                        </li>
-                                    </ItemTemplate>
-                                </asp:Repeater>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>--%>
             </aside>
             <div id="page-wrapper">
                 <!-- /.container-fluid -->
